# one-percent-srv

./: .gitignore  Cargo.toml  docker-compose.yml  justfile
.github/workflows/: pr-check.yml
migrations/: 20240317050329_create_users_table.sql  20240317050356_create_user_transactions_table.sql  20240317050405_create_habits_table.sql  20240317050412_create_notifications_table.sql  20240317050425_create_commitments_table.sql  20240317050438_create_installment_plans_table.sql  20240317050445_create_habit_logs_table.sql  20240317050449_create_commitment_installments_table.sql
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: common.rs  mod.rs  random_quote.rs
tests/: health_check.rs
