[package]
name = "one_percent_srv"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "one_percent_srv"

[dependencies]
actix-web = "4.5.1"
anyhow = "1.0.81"
rand = "0.8.5"
reqwest = { version = "0.11.26", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
sqlx = { version = "0.7.4", features = ["macros", "postgres", "uuid", "chrono", "migrate", "runtime-tokio-rustls"] }

[dev-dependencies]
actix-rt = "2.9.0"
tokio = "1.36.0"
